# gen_docs_template

./: Cargo.toml  README.md
src/: main.rs
