[package]
name = "gen_docs_template"
version = "0.0.1"
edition = "2021"

description = "This CLI automatically creates templates of comment text required when generating docs.rs.(docs.rsの生成時に必要なコメント文のテンプレートを自動作成するCLIです。)"
license = "MIT"

repository = "https://github.com/sotanengel/gen_docs_template"
readme = "README.md"
keywords=["docs.rs", "template"]

[dependencies]
